# Digital-Recognition

./: README.md
code/camera/: CMakeLists.txt  build.bat  clenet.cpp  clenet.h  cmdialog.cpp  cmdialog.h  cmvideo.cpp  cmvideo.h  main.cpp  video.ui
train_code/train/: CMakeLists.txt  build.bat  main.cpp  model.pt
